Make script create extend report